--- a/views/header.ejs
+++ b/views/header.ejs
@@ -46,7 +46,7 @@
         <ul>
             <li><a href="/">home</a></li>
             <li><a href="/news">news-Feed </a></li>
-            <li><a href="#">about</a></li>
+            <li><a href="/about">about</a></li>
         </ul>
     </nav>
 
